# memol

./: Cargo.toml  README.md  tea.yaml
example/: peek_top_all.sh  pop.sh  push.sh
src/: main.rs
src/stack/: mod.rs  stackable.rs
src/stack/json/: file.rs  mod.rs  persistence.rs  task.rs
src/stack/task/: mod.rs  task.rs  tasks.rs
