[package]
name = "memol"
version = "0.2.0"
edition = "2021"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/LeafChage/memol"
repository = "https://github.com/LeafChage/memol"
description = "Your task stack."

[dependencies]
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.59"
chrono = "0.4"
clap = {version = "3.1.6", features = ["derive"] }
dirs = "1.0.4"
